<resources>
    <string name="app_name">Homework1_r2</string>
    <string name="location_content">United State</string>
    <string name="phone_content">(022)77723287</string>
    <string name="email_content">juliana.c@mail.com</string>
    <string name="website_content">visual-photo.me</string>
    <string name="name">Julianna Carter</string>
    <string name="job">Photographer</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="posts_count">1.5 K</string>
    <string name="followers_count">17.8 K</string>
    <string name="following_count">1.3 K</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
</resources>
