<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/AppTheme"
        android:background="@color/icons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginTop="32dp"
            style="@style/HeadlineLook_First"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job"
            android:layout_marginTop="40dp"
            style="@style/BodyLook_Second"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintEnd_toEndOf="@id/name"
            app:layout_constraintTop_toTopOf="@id/name"
    />

    <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/avatar"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/person"
            app:civ_border_width="3dp"
            app:civ_border_color="@color/primary"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/job"/>

    <ImageView
            android:id="@+id/message"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/ic_message_black_24dp"
            android:backgroundTint="@color/accent"
            android:layout_marginStart="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/avatar"
            app:layout_constraintBottom_toBottomOf="@id/avatar"
            android:visibility="visible"
    />

    <ImageView
            android:id="@+id/dial"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_phone_black_24dp"
            android:tint="@color/accent"
            android:layout_marginEnd="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/avatar"
            app:layout_constraintBottom_toBottomOf="@id/avatar"
            android:visibility="visible"
    />

    <View
            android:id="@+id/dividerTop"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar"
            style="@style/DividerLook"
            android:visibility="visible"
    />

    <TextView
            android:id="@+id/posts_count"
            android:text="@string/posts_count"
            style="@style/HeadlineLook_First"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/followers_count"
            app:layout_constraintTop_toBottomOf="@id/dividerTop"
            app:layout_constraintHorizontal_chainStyle="spread"

    />

    <TextView
            android:id="@+id/followers_count"
            android:text="@string/followers_count"
            style="@style/HeadlineLook_First"
            app:layout_constraintStart_toEndOf="@id/posts_count"
            app:layout_constraintEnd_toStartOf="@id/following_count"
            app:layout_constraintTop_toBottomOf="@id/dividerTop"

    />

    <TextView
            android:id="@+id/following_count"
            android:text="@string/following_count"
            style="@style/HeadlineLook_First"
            app:layout_constraintStart_toEndOf="@id/followers_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dividerTop"

    />

    <TextView
            android:id="@+id/posts"
            android:text="Posts"
            style="@style/BodyLook_First"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/followers"
            app:layout_constraintTop_toBottomOf="@id/posts_count"
            app:layout_constraintHorizontal_chainStyle="spread"

    />

    <TextView
            android:id="@+id/followers"
            android:text="@string/followers"
            style="@style/BodyLook_First"
            app:layout_constraintStart_toEndOf="@id/posts"
            app:layout_constraintEnd_toStartOf="@id/following"
            app:layout_constraintTop_toBottomOf="@id/followers_count"


    />

    <TextView
            android:id="@+id/following"
            android:text="@string/following"
            style="@style/BodyLook_First"

            app:layout_constraintStart_toEndOf="@id/followers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/following_count"
    />

    <View
            android:id="@+id/dividerCenter"
            style="@style/DividerLook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/followers"
            android:visibility="visible"
    />

    <TextView
            android:id="@+id/dummyText"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            style="@style/BodyLook_First"
            android:textColor="@color/primary_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dividerCenter"


    />

    <View
            android:id="@+id/dividerBottom"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dummyText"
            style="@style/DividerLook"
            android:visibility="visible"
    />

    <TextView
            android:id="@+id/website"
            android:text="@string/website"
            style="@style/HeadlineLook_Second"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/email"
            app:layout_constraintTop_toBottomOf="@id/dividerBottom"
    />

    <TextView
            android:id="@+id/website_content"
            android:text="@string/website_content"
            style="@style/BodyLook_Second"
            app:layout_constraintStart_toStartOf="@id/website"
            app:layout_constraintEnd_toStartOf="@id/email_content"
            app:layout_constraintTop_toBottomOf="@id/website"

    />

    <TextView
            android:id="@+id/email"
            android:text="@string/email"
            style="@style/HeadlineLook_Second"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintStart_toEndOf="@id/website"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dividerBottom"

    />

    <TextView
            android:id="@+id/email_content"
            android:text="@string/email_content"
            style="@style/BodyLook_Second"
            app:layout_constraintStart_toStartOf="@id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"

    />

    <TextView
            android:id="@+id/phone"
            android:text="@string/phone"
            style="@style/HeadlineLook_Second"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/location"
            app:layout_constraintTop_toBottomOf="@id/website_content"

    />

    <TextView
            android:id="@+id/phone_content"
            android:text="@string/phone_content"
            style="@style/BodyLook_Second"
            app:layout_constraintStart_toStartOf="@id/phone"
            app:layout_constraintEnd_toStartOf="@id/location_content"
            app:layout_constraintTop_toBottomOf="@id/phone"

    />

    <TextView
            android:id="@+id/location"
            android:text="@string/location"
            style="@style/HeadlineLook_Second"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintStart_toEndOf="@id/phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_content"
    />

    <TextView
            android:id="@+id/location_content"
            android:text="@string/location_content"
            style="@style/BodyLook_Second"
            app:layout_constraintStart_toStartOf="@id/location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location"
    />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:tint="@color/icons"
            app:fabCustomSize="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_person_add_black_24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>